k8s/overlays/dev/patches/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrumquest
spec:
  # Single replica for dev
  replicas: 1
  template:
    spec:
      containers:
        - name: scrumquest
          # Lower resource limits for dev
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "250m"
